--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,52 @@
-@"
-# Python
-env/
-env311/
+# -----------------------
+# Python / Virtual Env
+# -----------------------
 __pycache__/
-*.py[cod]
+*.pyc
 *.pyo
 *.pyd
+*.pdb
+*.log
+.venv/
+.env
+env311/
+venv/
 
-# Data & models
-/model/
-*.h5
-*.keras
-data/PROCESSED/
-backend/media/
+# Jupyter
+.ipynb_checkpoints/
 
-# OS/Editor
-.DS_Store
+# VS Code
 .vscode/
 
-# Node
-web/node_modules/
+# -----------------------
+# Data (Large Files)
+# -----------------------
+data/raw/*
+data/processed/*
+!data/.gitkeep
+
+# Ignore all datasets EXCEPT gitkeep
+# (So the folder structure exists but files aren't committed)
+
+# -----------------------
+# Django
+# -----------------------
+*.sqlite3
+media/
+staticfiles/
+
+# -----------------------
+# Node / React
+# -----------------------
+node_modules/
 dist/
-"@ | Out-File -Encoding utf8 .\.gitignore
+build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# -----------------------
+# OS Specific
+# -----------------------
+.DS_Store
+Thumbs.db
