--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ jupyter
 django
 djangorestframework
 pillow   # Required for handling image uploads in Django
+djangorestframework-simplejwt # Added for token-based authentication
+django-cors-headers # Added for CORS configuration
 
 # Optional utilities (safe to include)
 tqdm
