--- a/.gitignore
+++ b/.gitignore
@@ -36,14 +36,28 @@ media/
 staticfiles/
 
 # -----------------------
-# Node / React
+# Node / React (Frontend specific)
 # -----------------------
-node_modules/
-dist/
-build/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# General node_modules and build outputs
+/src/frontend/node_modules/
+/src/frontend/dist/
+/src/frontend/build/
+
+# Log files
+/src/frontend/npm-debug.log*
+/src/frontend/yarn-debug.log*
+/src/frontend/yarn-error.log*
+
+# Environment files
+/src/frontend/.env
+/src/frontend/.env.local
+/src/frontend/.env.*.local
+
+# TypeScript cache files
+/src/frontend/*.tsbuildinfo
+
+# Vite specific cache/output
+/src/frontend/.vite/
 
 # -----------------------
 # OS Specific
